# my_shell

./: CMakeLists.txt
include/: commandes.h  input.h  shell.h  utils.h
src/: commandes.c  input.c  main.c  shell.c  utils.c
